# action-pr-review

./: Dockerfile  README.md  action.yml  main.py  pyproject.toml
.github/workflows/: build-and-push-docker.yml
